# pgmlink

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_binaries/: CMakeLists.txt  compile_all.py  install.sh  list-dependencies.sh  relative-rpath.sh.in  run_ilastik.sh
build_cons/: qt.conf
build_gui_binaries/: CMakeLists.txt  install.sh
cmake_extensions/: FindANN.cmake  FindArmadillo.cmake  FindCplex.cmake  FindDlib.cmake  FindFFTW3.cmake  FindLemon.cmake  FindMlpack.cmake  FindOpengm.cmake  FindVIGRA.cmake  FindXml2.cmake
doc/: Doxyfile.in  groups.dox  index.dox
example/: run_test_sequence.cmd  run_test_sequence.sh
example/testData/: Sequence000-003.h5  Sequence000-003_probabilities.h5  classifiers.h5  ilastik-object-detection.ilp  ilastik-pixel-classification.ilp
example/testData/tif/: Sequence000.tif  Sequence001.tif  Sequence002.tif  Sequence003.tif
examples/: track_standalone.cpp
examples/historic/: Makefile  Makefile.1.2  test_libs_1.2.cpp  test_libs_1.3.cpp  track2_1.0.cpp  track2_1.1.cpp  track2_1.2.cpp  track2_1.3.cpp
include/: common.h  energy.h  event.h  field_of_view.h  file_reader.h  graph.h  graphical_model.h  hypotheses.h  matching_pars.h  nearest_neighbors.h  randomforest.h  synthetic_data.h  track.h  tracking.h.in  traxels.h
include/pgmlink/: auxiliary.h  classifier_auxiliary.h  clustering.h  energy.h  event.h  feature.h  feature_calculator.h  feature_extraction.h  field_of_view.h  graph.h  graphical_model.h  hanslovsky.h  hanslovsky_grammar.h  higher_order_features.h  higher_order_features_auxiliary.h  hypotheses.h  image_input.h  log.h  merger_resolving.h  merger_resolving_grammar.h  multi_hypotheses_evaluation.h  multi_hypotheses_graph.h  multi_hypotheses_segmentation.h  multi_hypotheses_tracking.h  multi_hypotheses_workflow.h  nearest_neighbors.h  outlier_detection.h  pgm.h  pgm_chaingraph.h  pgm_constracking.h  pgm_multi_hypotheses.h  pgmlink_export.h  pgmlink_export.h.cmake  randomforest.h  reasoner.h  reasoner_constracking.h  reasoner_constracking.h.gch.REMOVED.git-id  reasoner_constracking_dd.h  reasoner_multi_hypotheses.h  reasoner_opengm.h  (+13 more)
include/pgmlink/ext_opengm/: decorator_weighted.hxx  dualdecomp_subgradient_hardconstraint.hxx  feature.hxx  indicator_function.hxx  loglinearmodel.hxx  loss_hamming.hxx  structsvm.hxx
include/pgmlink/feature_calculator/: absolute_difference.h  asymmetric_ratio.h  base.h  elementwise_squared_difference.h  helpers.h  identity.h  pairwise_operation.h  ratio.h  square_root_squared_difference.h  squared_difference.h
include/reasoning/: mrf_reasoner.h
misc/: MLPACK_PATCH_README.txt  avoid_singular_cov.patch  installation_armadillo_mlpack.txt  lpcplex.hxx
preprocessing/: feature_example.py
python/: CMakeLists.txt  bic_test.py  ctracking.cpp  pyauxiliary.cpp  pyfield_of_view.cpp  pyhanslovsky.cpp  pyhypotheses.cpp  pymerger_resolving.cpp  pymulti_hypotheses.cpp  pypgmlink.cpp  pyregion_adjacency.cpp  pytrack.cpp  pytraxels.cpp
python/tests/: ctracking_test.py  pgmlink_test.py
scripts/: convert_from_new_to_old.py  convert_from_old_to_new.py
src/: classifier_auxiliary.cpp  clustering.cpp  common.cpp  energy.cpp  event.cpp  feature.cpp  feature_extraction.cpp  field_of_view.cpp  file_reader.cpp  graphical_model.cpp  hanslovsky.cpp  higher_order_features.cpp  higher_order_features_auxiliary.cpp  hypotheses.cpp  image_input.cpp  matching_pars.cpp  merger_resolving.cpp  mrf_reasoner.cpp  multi_hypotheses_graph.cpp  multi_hypotheses_segmentation.cpp  multi_hypotheses_test.cpp  multi_hypotheses_tracking.cpp  nearest_neighbors.cpp  outlier_detection.cpp  pgm.cpp  pgm_chaingraph.cpp  pgm_multi_hypotheses.cpp  randomforest.cpp  reasoner_constracking.cpp  reasoner_constracking_dd.cpp  reasoner_multi_hypotheses.cpp  reasoner_opengm.cpp  reasoner_pgm.cpp  region_adjacency.cpp  region_graph.cpp  synthetic_data.cpp  track.cpp  track_features.cpp  track_features_auxiliary.cpp  tracking.cpp  (+4 more)
src/feature_calculator/: absolute_difference.cpp  asymmetric_ratio.cpp  base.cpp  elementwise_squared_difference.cpp  helpers.cpp  identity.cpp  pairwise_operation.cpp  ratio.cpp  square_root_squred_difference.cpp  squared_difference.cpp
system_tests/: CMakeLists.txt  fully_connected_graph.cpp
tests/: CMakeLists.txt  auxiliary_test.cpp  energy_test.cpp  event_serialization_test.cpp  feature_extraction_test.cpp  feature_test.cpp  field_of_view_test.cpp  graph_test.cpp  graphical_model_test.cpp  hanslovsky_merger_resolver_test.cpp  higher_order_features_auxiliary_test.cpp  higher_order_features_test.cpp  hypotheses_test.cpp  loadtest.h5  merger_resolver_test.cpp  mrf_reasoner_test.cpp  multi_hypotheses_test.cpp  outlier_detection_test.cpp  pgm_test.cpp  randomforest_test.cpp  randomforest_test.cpp.cmake  reasoner_constracking_dd_test.cpp  reasoner_constracking_test.cpp  reasoner_multi_hypotheses_test.cpp  reasoner_opengm_test.cpp  reasoner_pgm_test.cpp  region_graph_test.cpp  track_serialization.cpp  track_test.cpp  tracking_features_auxiliary_test.cpp  tracking_features_test.cpp  tracks_auxiliary_test.cpp  traxels_test.cpp  uncertainty_test.cpp  util_test.cpp  xorforest.h5
tests/ext_opengm/: test_feature.cxx  test_functions.cxx  test_loglinearmodel.cxx  test_structsvm.cxx
tests/system/: learning_systemtest.cpp.cmake  traxelstore_dros_0-5.boost
workflow/: workflow.py
workflow/classifierTraining/: trainClassifiers.py
workflow/eventVector/: eventVector.py
workflow/oversegmentation/: watershed3d.py
workflow/regionMerging/: multilevelRegionMerging.py
workflow/traxelstoreGeneration/: generateTraxelstore.py
